* added firebase config

--- a/src/app/adminLayout/admin-layout.component.html
+++ b/src/app/adminLayout/admin-layout.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" fxFlex [class.dark-theme]="isDarkTheme">
   <md-toolbar color="primary">
-    <span>Angular Kendo UI</span>
+    <span>TrAvElLeR</span>
     <button md-icon-button (click)="sidenav.toggle()">
       <md-icon>more_vert</md-icon>
     </button>
