--- a/src/styles.css
+++ b/src/styles.css
@@ -2,12 +2,12 @@
 
 @import "https://fonts.googleapis.com/css?family=Material+Icons";
 @import "https://fonts.googleapis.com/css?family=Roboto:400,300";
-
 html,
 body {
-  display: flex;
-  flex-direction: column;
-  font-family: Roboto, Arial, sans-serif;
-  margin: 0;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    font-family: Roboto, Arial, sans-serif;
+    margin: 0;
+    height: 100%;
+    width: 100%;
 }
