google login auth

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid banner">
     <div class="login-card">
-        <button type="button" class="btn btn-primary">Log In with Google</button>
-        <button type="button" class="btn btn-primary">Log In with Facebook</button>
+        <button type="button" class="btn btn-primary" (click)="loginWithGoogle()">Log In with Google</button>
+        <button type="button" class="btn btn-primary" (click)="loginWithFB()">Log In with Facebook</button>
 
     </div>
 </div>
