--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -9,4 +9,12 @@
 
 .login-card {
     width: 20%;
+    background-color: rgba(255,255,255, 0.5) ;
+    margin: 0 auto;
+    padding: 16px 16px 0;
+
+    >* {
+        width: 100%;
+        margin-bottom: 16px;
+    }
 }
