--- a/src/app/maps/map/map.component.html
+++ b/src/app/maps/map/map.component.html
@@ -1,3 +1,11 @@
-<agm-map [latitude]="lat" [longitude]="lng">
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)">
+  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(i)" [latitude]="m.lat"
+  [longitude]="m.lng" [markerDraggable]="false">
+
+  <agm-info-window>
+    <input type="text" id="userRemarks" formControlName="userReview"/>
+    <!--<input type="text" [(ngModel)]= "info"/>-->
+  </agm-info-window>
+
+</agm-marker>
 </agm-map>
