--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,3 +1,8 @@
-<p>
-  menu works!
-</p>
+<md-toolbar color="primary">
+    <button kendoButton class="btn-nav" [icon]="'menuUnicode'"></button>
+    <span class="branding">TrAvElLeR</span>
+    <span class="spacer"></span>
+    <button kendoButton [icon]="'verticalUnicode'">
+      
+    </button>
+</md-toolbar>
