--- a/src/app/maps/map/map.component.html
+++ b/src/app/maps/map/map.component.html
@@ -1,8 +1,8 @@
-<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)">
+<agm-map (mapClick)="mapClicked($event)" [zoom]="4">
   <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m)" [latitude]="m.lat"
   [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
     <agm-info-window [isOpen]="m.isOpen" [class]="info-window">
-      <input type="text" id="userRemarks" [(ngModel)]="m.remarks" required/>
+      <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
       <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
       <!--<input type="text" [(ngModel)]= "info"/>-->
     </agm-info-window>
