nav drawer comp

--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,8 +1,14 @@
-<md-toolbar color="primary">
-    <button kendoButton class="btn-nav" [icon]="'menuUnicode'"></button>
-    <span class="branding">TrAvElLeR</span>
-    <span class="spacer"></span>
-    <button kendoButton [icon]="'verticalUnicode'">
+<div fxLayout="column" class="menu-bar" fxFlex>
+    <md-toolbar color="primary">
+        <!--<button kendoButton class="btn-nav" [icon]="'menu'"></button>-->
+        <span class="branding">TrAvElLeR</span>
+        <span class="spacer"></span>
+        <button kendoButton class="btn-menu" [icon]="'more-vertical'" md-icon-button [mdMenuTriggerFor]="menu">
       
     </button>
-</md-toolbar>
+    </md-toolbar>
+    <md-menu #menu x-position="before">
+        <button kendoButton md-menu-item (click)="showProfile()" [icon]="'user'">My Profile</button>
+        <button kendoButton md-menu-item (click)="logOut()" [icon]="'lock'">Logout</button>
+    </md-menu>
+</div>
