--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -1,10 +1,21 @@
-.branding {
-    vertical-align: middle;
-    margin-left: 16px;
-}
-
-.btn-nav {
-    border: none;
-    color: white;
-    background: #f44336;
+.menu-bar {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    .branding {
+        vertical-align: middle;
+        margin-left: 16px;
+    }
+    .btn-nav,
+    .btn-menu {
+        border: none;
+        color: white;
+        background: #2196f3;
+    }
+    .spacer {
+        -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
+    }
 }
