--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -1,89 +1,97 @@
 .notes-section {
-    height: calc(100vh - 64px);
-    padding-right: 5px;
-    width: 25%;
-    position: fixed;
-    top: 64px;
-    left: -25%;
-    z-index: 999;
-    -webkit-transition: all .5s;
-    /* Safari */
-    transition: all .5s;
-    .notes-list {
-        background: #fff;
-        height: inherit;
-        padding-top: 28px;
-        padding-bottom: 10px;
-        -webkit-box-shadow: -3px 1px 5px -1px #AAA;
-        -moz-box-shadow: -3px 1px 5px -1px #AAA;
-        box-shadow: -3px 1px 5px -1px #AAA;
+  height: calc(100vh - 64px);
+  padding-right: 5px;
+  width: 25%;
+  position: fixed;
+  top: 64px;
+  z-index: 999;
+  animation: slide-in 2s forwards;
+  -webkit-animation: slide-in 2s forwards;
+  @keyframes slide-in {
+    100% {
+      transform: translateX(0%);
     }
-    h2 {
-        display: inline;
-        color: #c0c0c0;
-        letter-spacing: 1px;
-        margin-left: 10px;
+  }
+  @-webkit-keyframes slide-in {
+    100% {
+      -webkit-transform: translateX(0%);
     }
-    .notes {
-        padding: 10px 5px;
-        max-height: calc(100vh - 128px);
-        overflow-y: scroll;
-        div {
-            width: 100%;
-            padding-bottom: 15px;
-            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-            transition: 0.3s;
-            &:hover {
-                box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-            }
-            >img {
-                height: 200px;
-                width: 100%;
-            }
-            h4 {
-                font-size: 1em;
-                padding: 15px 5px 5px 5px;
-            }
-            p {
-                font-size: 0.75em;
-                padding: 5px;
-            }
-        }
+  }
+  .notes-list {
+    background: #fff;
+    height: inherit;
+    padding-top: 28px;
+    padding-bottom: 10px;
+    -webkit-box-shadow: -3px 1px 5px -1px #AAA;
+    -moz-box-shadow: -3px 1px 5px -1px #AAA;
+    box-shadow: -3px 1px 5px -1px #AAA;
+  }
+  h2 {
+    display: inline;
+    color: #c0c0c0;
+    letter-spacing: 1px;
+    margin-left: 10px;
+  }
+  .notes {
+    padding: 10px 5px;
+    max-height: calc(100vh - 128px);
+    overflow-y: scroll;
+    div {
+      width: 100%;
+      padding-bottom: 15px;
+      box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+      transition: 0.3s;
+      &:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+      }
+      >img {
+        height: 200px;
+        width: 100%;
+      }
+      h4 {
+        font-size: 1em;
+        padding: 15px 5px 5px 5px;
+      }
+      p {
+        font-size: 0.75em;
+        padding: 5px;
+      }
     }
-    .notes::-webkit-scrollbar {
-        width: 10px;
-        background-color: #F5F5F5;
+  }
+  .notes::-webkit-scrollbar {
+    width: 10px;
+    background-color: #F5F5F5;
+  }
+  .notes::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+  }
+  .notes::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #555;
+  }
+  .notes::-webkit-scrollbar-thumb:hover {
+    background-color: #2b2b2b;
+  }
+  .btn-submit {
+    background-color: #21addd;
+    color: #fff;
+    padding: 7px 15px;
+    float: right;
+    margin-right: 12px;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    &:hover {
+      background: #1a8ab1;
     }
-    .notes::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-        border-radius: 10px;
-        background-color: #F5F5F5;
+    @media screen and (max-width: 780px) {
+      padding: 8px 13px;
     }
-    .notes::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-        background-color: #555;
-    }
-    .notes::-webkit-scrollbar-thumb:hover {
-        background-color: #2b2b2b;
-    }
-    .btn-submit {
-        background-color: #21addd;
-        color: #fff;
-        padding: 7px 15px;
-        float: right;
-        margin-right: 12px;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        &:hover {
-            background: #1a8ab1;
-        }
-        @media screen and (max-width: 780px) {
-            padding: 8px 13px;
-        }
-    }
-    .blank-message {
-        text-align: center;
-    }
+  }
+  .blank-message {
+    text-align: center;
+  }
 }
