--- a/src/app/maps/map/map.component.html
+++ b/src/app/maps/map/map.component.html
@@ -1,10 +1,9 @@
-<agm-map (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
   <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m)" [latitude]="m.lat"
   [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
     <agm-info-window [isOpen]="m.isOpen" [class]="info-window">
       <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
       <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
-      <!--<input type="text" [(ngModel)]= "info"/>-->
     </agm-info-window>
   </agm-marker>
 </agm-map>
