marker closing issue fixed

--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,7 +1,7 @@
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
   <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat"
   [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
-    <agm-info-window [isOpen]="m.isOpen" [class]="info-window">
+    <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
       <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
       <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
     </agm-info-window>
