* changed zone.js version to 0.8.7 from 0.8.4 to resolve a console error * changed navbar close icon

--- a/src/app/shared/nav-bar/nav-bar.component.html
+++ b/src/app/shared/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <div class="notes-list">
         <div class="heading-wrapper">
             <h2>Notes</h2>
-            <span class="k-icon k-i-close-outline" (click)="closeNav()"></span>
+            <span class="k-icon k-i-close" (click)="closeNav()"></span>
         </div>
         <div class="notes">
             <div *ngFor="let note of notes">
