--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,10 +1,11 @@
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
-  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat"
-  [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
-    <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
-      <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
-      <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
-    </agm-info-window>
-  </agm-marker>
+    <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
+        <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
+            <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
+            <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
+        </agm-info-window>
+    </agm-marker>
 </agm-map>
-<button type="button" (click)="setCurrentPosition()"></button>
+<button type="button" class="locate-me-button" (click)="setCurrentPosition()">
+  <span class="locate-me-icon"></span>
+</button>
