--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,11 +1,18 @@
 <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
-    <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
-        <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
-            <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
-            <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
-        </agm-info-window>
-    </agm-marker>
+  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng"
+    [markerDraggable]="false" [openInfoWindow]="m.isOpen">
+    <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
+      <input type="text" id="userRemarks" [(ngModel)]="m.message" required/>
+      <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
+    </agm-info-window>
+  </agm-marker>
+  <agm-marker (markerClick)="clickedMarker(presentLocation, i)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng"
+    [markerDraggable]="false" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl">
+    <agm-info-window [isOpen]="presentLocation.isOpen">
+      <input type="text" required/>
+    </agm-info-window>
+  </agm-marker>
 </agm-map>
 <button type="button" class="locate-me-button" (click)="setCurrentPosition()">
   <span class="locate-me-icon"></span>
