--- a/src/app/user/map/map.component.scss
+++ b/src/app/user/map/map.component.scss
@@ -18,18 +18,40 @@
     overflow: hidden;
     cursor: pointer;
     transition: background-color 0.16s ease-out;
+    .locate-me-icon {
+        background-image: url('../../../assets/images/mylocation-sprite.png');
+        background-position: 0 0;
+        background-size: 180px 18px;
+        display: block;
+        height: 18px;
+        left: 6px;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 6px;
+        width: 18px;
+    }
 }
 
-.locate-me-icon {
-    background-image: url('../../../assets/images/mylocation-sprite.png');
-    background-position: 0 0;
-    background-size: 180px 18px;
-    display: block;
-    height: 18px;
-    left: 6px;
-    margin: 0;
-    padding: 0;
+.search-box {
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
     position: absolute;
-    top: 6px;
-    width: 18px;
+    top: 70px;
+    right: 50px;
+    z-index: 999;
+    width: 30%;
+    background: #fff;
+    border-radius: 2px;
+    box-sizing: border-box;
+    border-bottom: 1px solid transparent;
+    transition-property: background, box-shadow;
+    transition-duration: 0.3s;
+    input {
+        width: 100%;
+        outline: none;
+        user-select: none;
+        border: none;
+        font-size: 1em;
+        padding: 15px;
+    }
 }
