--- a/src/app/user/map/map.component.scss
+++ b/src/app/user/map/map.component.scss
@@ -7,6 +7,7 @@
     background-color: rgba(255, 255, 255, 1);
     border: none;
     user-select: none;
+    outline: none;
     border-radius: 2px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
     display: block;
@@ -37,7 +38,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
     position: absolute;
     top: 70px;
-    right: 50px;
+    right: 20px;
     z-index: 999;
     width: 30%;
     background: #fff;
@@ -47,7 +48,7 @@
     transition-property: background, box-shadow;
     transition-duration: 0.3s;
     input {
-        width: 100%;
+        width: 85%;
         outline: none;
         user-select: none;
         border: none;
