notes modulle removed note comp addded

--- a/src/app/shared/note/note.component.html
+++ b/src/app/shared/note/note.component.html
@@ -1,6 +1,6 @@
-<md-card class="card">
+<!--<md-card class="card">
     <md-card-title class="md-title">Hello</md-card-title>
     <md-card-content>
         <p>Angular Attack</p>
     </md-card-content>
-</md-card>
+</md-card>-->
