--- a/src/app/shared/note/note.component.scss
+++ b/src/app/shared/note/note.component.scss
@@ -1,11 +1,59 @@
-.card {
-    width: 20%;
-    min-width: 240px;
-    background-color: yellow;
-    margin: 0 auto;
-    padding: 48px 16px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.note-window {
+    background: #EEE;
+    padding: 20px;
+    margin: 10px 0;
+    .row {
+        margin: 10px 0;
+    }
+    .row.switch {
+        margin: 20px 0;
+        display: flex;
+        justify-content: space-between;
+    }
+    .image-upload {
+        max-height: 185px;
+        overflow-x: hidden;
+        overflow-y: auto;
+    }
+    label {
+        font-weight: bold;
+        text-align: center;
+        vertical-align: super;
+    }
+    input {
+        width: 94%;
+        border: none;
+        outline: none;
+        padding: 10px;
+    }
+    button {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        padding: 10px;
+        margin-top: 20px;
+        color: #fff;
+        background: #33cc99;
+        border-radius: 2px;
+    }
+}
+
+.note-card {
+    width: 100%;
+    padding-bottom: 15px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    &:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    }
+    >img {
+        height: 200px;
+        width: 100%;
+    }
+    h4 {
+        font-size: 1em;
+        padding: 15px 5px 5px 5px;
+    }
+    p {
+        font-size: 0.75em;
+        padding: 5px;
+    }
 }
