--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -2,16 +2,13 @@
     <input placeholder="Search for Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 </div>
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="false" [zoom]="zoom">
-  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng"
-    [markerDraggable]="false" [openInfoWindow]="m.isOpen">
-    <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
-      <input type="text" id="userRemarks" [(ngModel)]="m.message" (keydown)="handleKeyDown($event, i)"/>
-      <button kendoButton [icon]="'check'" (click)="saveNote(i)"></button>
-      <input type="checkbox" [(ngModel)]="m.isPublic" />
-    </agm-info-window>
-  </agm-marker>
-  <agm-marker (markerClick)="clickedMarker(presentLocation, i)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl">
-  </agm-marker>
+    <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
+        <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)" maxWidth="400">
+            <app-note [marker]="m" (keydown)="handleKeyDown($event, i)" (saveNote)="saveNote(i)"></app-note>
+        </agm-info-window>
+    </agm-marker>
+    <agm-marker (markerClick)="clickedMarker(presentLocation, i)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl">
+    </agm-marker>
 </agm-map>
 <button type="button" class="locate-me-button" (click)="setCurrentPosition()">
   <span class="locate-me-icon"></span>
