max width issue fixed

--- a/src/app/shared/note/note.component.scss
+++ b/src/app/shared/note/note.component.scss
@@ -21,7 +21,7 @@
         vertical-align: super;
     }
     input {
-        width: 94%;
+        width: 90%;
         border: none;
         outline: none;
         padding: 10px;
@@ -30,6 +30,7 @@
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
         padding: 10px;
         margin-top: 20px;
+        margin-left: 62%;
         color: #fff;
         background: #33cc99;
         border-radius: 2px;
