--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,7 +1,7 @@
 <div class="search-box">
     <input placeholder="Search for a Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 </div>
-<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom">
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom" #map [disableDoubleClickZoom]="true" [center]="{lat:lat, lng:lng}">
     <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
         <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)" maxWidth="400">
             <app-note [marker]="m" (keydown)="handleKeyDown($event, i)" (saveNote)="saveNote(i)"></app-note>
