--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,14 +1,16 @@
 <div class="search-box">
-    <input placeholder="Search for a Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
+  <input placeholder="Search for a Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 </div>
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom">
-    <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen">
-        <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)" maxWidth="300">
-            <app-note [marker]="m" (keydown)="handleKeyDown($event, i)" (saveNote)="saveNote(i)"></app-note>
-        </agm-info-window>
-    </agm-marker>
-    <agm-marker (markerClick)="clickedMarker(presentLocation, i)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl">
-    </agm-marker>
+  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng"
+    [markerDraggable]="false" [openInfoWindow]="m.isOpen">
+    <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)" maxWidth="300">
+      <app-note [marker]="m" (keydown)="handleKeyDown($event, i)" (saveNote)="saveNote(i)" (imagePlaced)="uploadImage($event)"></app-note>
+    </agm-info-window>
+  </agm-marker>
+  <agm-marker (markerClick)="clickedMarker(presentLocation, i)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng"
+    [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl">
+  </agm-marker>
 </agm-map>
 <button type="button" class="locate-me-button" (click)="setCurrentPosition()">
   <span class="locate-me-icon"></span>
