--- a/src/app/shared/note/note.component.scss
+++ b/src/app/shared/note/note.component.scss
@@ -40,7 +40,7 @@
 }
 
 .note-card {
-    width: 100%;
+    width: 300px;
     padding-bottom: 15px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     transition: 0.3s;
@@ -58,5 +58,21 @@
     p {
         font-size: 0.75em;
         padding: 5px;
+    }
+    div {
+        padding: 15px 5px 0 5px;
+        button:nth-child(1) {
+            border: none;
+            outline: none;
+            background: #fff;
+            //background: #5cb85c;
+        }
+        button:nth-child(2) {
+            border: none;
+            outline: none;
+            background: #fff;
+            //background: #ec971f;
+            margin-left: 10px;
+        }
     }
 }
