--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -1,8 +1,8 @@
 <div class="search-box">
     <input placeholder="Search for Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 </div>
-<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom">
-  <agm-marker *ngFor="let m of markers; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng"
+<agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom" (boundsChange)="getBounds($event)">
+  <agm-marker *ngFor="let m of markers | filterMarkers: bounds.lng.b:bounds.lng.f:bounds.lat.f:bounds.lat.b; let i = index" (markerClick)="clickedMarker(m, i)" [latitude]="m.lat" [longitude]="m.lng"
     [markerDraggable]="false" [openInfoWindow]="m.isOpen">
     <agm-info-window [isOpen]="m.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose(i)">
       <input type="text" id="userRemarks" [(ngModel)]="m.message" (keydown)="handleKeyDown($event, i)"/>
