--- a/src/app/shared/nav-bar/nav-bar.component.scss
+++ b/src/app/shared/nav-bar/nav-bar.component.scss
@@ -44,20 +44,23 @@ $animation-time: 0.5s;
         margin-left: 10px;
     }
     .notes {
-        padding: 10px 5px;
+        padding: 10px;
         max-height: calc(100vh - 128px);
         overflow-y: auto;
         div {
+            background:#ececec;
             width: 100%;
             padding-bottom: 15px;
+            margin-bottom: 12px;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             transition: 0.3s;
             &:hover {
                 box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
             }
             >img {
+                padding: 0 5px;
                 height: 200px;
-                width: 100%;
+                width: calc(100% - 10px);
             }
             h4 {
                 font-size: 1em;
