--- a/src/app/user/map/map.component.html
+++ b/src/app/user/map/map.component.html
@@ -2,17 +2,17 @@
     <input placeholder="Search for a Place" autocorrect="off" autocapitalize="off" spellcheck="off" type="text" #search [(ngModel)]="searchControl">
 </div>
 <agm-map [latitude]="lat" [longitude]="lng" (mapClick)="mapClicked($event)" [scrollwheel]="true" [zoom]="zoom" #map [disableDoubleClickZoom]="true" (boundsChange)="getBounds($event)">
-    <agm-marker *ngFor="let m of markers | filterMarkers: bounds.lng.b:bounds.lng.f:bounds.lat.f:bounds.lat.b; let i = index" (markerClick)="clickedMarker(m)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen" [iconUrl]="m.iconUrl">
+    <agm-marker *ngFor="let m of markers | filterMarkers: bounds.lng.b:bounds.lng.f:bounds.lat.f:bounds.lat.b; let i = index" (markerClick)="clickedMarker(m)" [latitude]="m.lat" [longitude]="m.lng" [markerDraggable]="false" [openInfoWindow]="m.isOpen" [iconUrl]="'assets/images/marker.png'">
         <agm-info-window [isOpen]="m.isOpen" [class]="info-window" maxWidth="300">
             <app-note [marker]="m"></app-note>
         </agm-info-window>
     </agm-marker>
-    <agm-marker *ngIf="newMarker && newMarker.isShow" [latitude]="newMarker.lat" [longitude]="newMarker.lng" [markerDraggable]="false" [openInfoWindow]="newMarker.isOpen">
+    <agm-marker *ngIf="newMarker && newMarker.isShow" [latitude]="newMarker.lat" [longitude]="newMarker.lng" [markerDraggable]="false" [openInfoWindow]="newMarker.isOpen" [iconUrl]="'assets/images/marker.png'">
         <agm-info-window [isOpen]="newMarker.isOpen" [class]="info-window" (infoWindowClose)="infoWindowClose()" maxWidth="300">
             <app-note [marker]="newMarker" (saveNote)="saveNote()" (imagePlaced)="uploadImage($event)"></app-note>
         </agm-info-window>
     </agm-marker>
-    <agm-marker (markerClick)="clickedMarker(presentLocation)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="presentLocation.iconUrl"></agm-marker>
+    <agm-marker (markerClick)="clickedMarker(presentLocation)" [latitude]="presentLocation.lat" [longitude]="presentLocation.lng" [openInfoWindow]="presentLocation.isOpen" [iconUrl]="'assets/images/current.png'"></agm-marker>
 </agm-map>
 <button type="button" class="locate-me-button" (click)="setCurrentPosition()">
   <span class="locate-me-icon"></span>
