--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div fxLayout="column" class="menu-bar" fxFlex>
     <md-toolbar color="primary">
-        <!--<button kendoButton class="btn-nav" [icon]="'menu'"></button>-->
+        <button kendoButton class="btn-nav" [icon]="'menu'" (click)="toggleNoteList()"></button>
         <span class="branding">TrAvElLeR</span>
         <span class="spacer"></span>
         <button kendoButton class="btn-menu" [icon]="'more-vertical'" md-icon-button [mdMenuTriggerFor]="menu">
