--- a/src/app/shared/menu/menu.component.html
+++ b/src/app/shared/menu/menu.component.html
@@ -8,7 +8,7 @@
     </button>
     </md-toolbar>
     <md-menu #menu x-position="before">
-        <button kendoButton md-menu-item (click)="showProfile()" [icon]="'user'">My Profile</button>
+        <!--<button kendoButton md-menu-item (click)="showProfile()" [icon]="'user'">My Profile</button>-->
         <button kendoButton md-menu-item (click)="logOut()" [icon]="'lock'">Logout</button>
     </md-menu>
 </div>
