--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="banner">
-    <h1>TrAvElLeR</h1>
+    <h1>Traveller</h1>
     <div class="login-card">
         <button kendoButton  (click)="login('google')" [icon]="'google'" class="btn-google">Log In with Google</button>
         <button kendoButton  (click)="login('facebook')" [icon]="'facebook'" class="btn-facebook">Log In with Facebook</button>
