--- a/src/app/shared/menu/menu.component.scss
+++ b/src/app/shared/menu/menu.component.scss
@@ -4,6 +4,7 @@
     .branding {
         vertical-align: middle;
         margin-left: 16px;
+        font-family: 'Tangerine', serif;
     }
     .btn-nav,
     .btn-menu {
